# labelme2yolov7segmentation

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  Pipfile  README.md  cz.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-app.yml
labelme2yolo/: __main__.py  datatypes.py
labelme2yolov7segmentation/: __main__.py  datatypes.py
test/: test_unit_coco_convert.py
test/__data__/yolov7_annotations/: 000000000285.json  000000000285.txt
