[tool.poetry]
name = "labelme2yolov7segmentation"
version = "2.0.4"
description = ""
license = "MIT"
authors = ["Tlaloc-Es <dev@tlaloc-es.com>"]
homepage = "https://github.com/Tlaloc-Es/labelme2yolov7segmentation"
repository = "https://github.com/Tlaloc-Es/labelme2yolov7segmentation"
readme = "README.md"

[tool.poetry.scripts]
labelme2yolo = "labelme2yolov7segmentation.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
click = "*"
pydantic = "*"
pyyaml = "*"
albumentations = "^1.3.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
black = "*"
mypy = "*"
ipykernel = "*"
ipython = "*"
commitizen = "*"
poethepoet = "*"

[tool.poe.tasks]
test = "python -m pytest -s -v test/"
check_commit = "pre-commit run --all-files"
mypy = "mypy src --check-untyped-defs"
lint = "pylint --rcfile=.pylintrc src --max-complexity=10"
format = "black src test"
type_check = "mypy src"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"

[tool.commitizen]
version = "2.0.4"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "C90", "UP", "N", "PLC", "PLE", "PLR", "PLW"]
ignore = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 10

